--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./server.js"
+    "generate": "prisma generate",
+    "start": "npm run generate && nodemon ./server.js",
+    "db:pull": "prisma db pull"
   },
   "author": "",
   "license": "ISC",
